# athena-browser

./: .athena-browser-mcp.json  .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SDK_INTEGRATION.md  CMakeLists.txt  CMakePresets.json  GTK_WINDOW_SPLIT_PLAN.md  MCP_GUIDE.md  NODE_RUNTIME.md  PR_DESCRIPTION.md  PR_REVIEW_RESPONSE.md  README.md  REORGANIZATION_PLAN.md  package-lock.json  package.json  test_endpoints.sh
agent/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts
agent/examples/: claude-desktop-config.json  mcp-demo.ts
agent/src/: browser-api-client.ts  browser-controller-impl.ts  claude-query-builder.ts  mcp-server.ts  mcp-stdio-server.ts  tool-logging.ts
agent/src/__tests__/: claude-query-builder.test.ts  tool-logging.test.ts
agent/src/__tests__/claude-config/: browser-prompts.test.ts  permissions.test.ts  sub-agents.test.ts  tool-selector.test.ts
agent/src/api/: v1.ts
agent/src/api/routes/: browser.ts  chat.ts  health.ts  poc.ts  sessions.ts
agent/src/browser/: api-client.ts  controller.ts  mock-controller.ts  native-controller.ts
agent/src/claude/: client.ts  query-builder.ts
agent/src/claude-config/: permissions.ts  tool-selector.ts
agent/src/claude/config/: permissions.ts  tool-selector.ts
agent/src/mcp/: agent-adapter.ts  server.ts  stdio-server.ts
agent/src/routes/: health.ts
agent/src/server/: server.ts
agent/src/session/: manager.ts
agent/test/: claude-client-restrictions.test.ts  session-manager.test.ts  session-resumption.test.ts  session-storage.test.ts  subagents.test.ts  tool-permissions.test.ts
agent/test/integration/: browser-control.test.ts
agent/test/mcp/: helpers-refactored.ts  helpers.ts  mcp-server.test.ts
app/: CMakeLists.txt
app/src/: app_handler.cpp  app_handler.h  main.cpp  main_gtk_osr.cpp  scheme_handler.cpp  scheme_handler.h
app/src/browser/: app_handler.cpp  app_handler.h  browser_engine.h  cef_client.cpp  cef_client.h  cef_engine.cpp  cef_engine.h  message_router_handler.cpp  message_router_handler.h  platform_flags.cpp  platform_flags.h  thread_safety.h
app/src/core/: application.cpp  application.h  browser_window.cpp  browser_window.h  types.h
app/src/platform/: gtk_window.cpp  gtk_window.h  gtk_window_browser_control.cpp  gtk_window_callbacks.cpp  gtk_window_callbacks.h  gtk_window_sidebar.cpp  gtk_window_system.cpp  gtk_window_tabs.cpp  qt_agent_panel.cpp  qt_agent_panel.h  qt_agent_panel_theme.cpp  qt_agent_panel_theme.h  qt_browserwidget.cpp  qt_browserwidget.h  qt_chat_bubble.cpp  qt_chat_bubble.h  qt_chat_input_widget.cpp  qt_chat_input_widget.h  qt_claude_panel.cpp  qt_claude_panel.h  qt_mainwindow.cpp  qt_mainwindow.h  qt_mainwindow_browser.cpp  qt_mainwindow_tabs.cpp  qt_mainwindow_toolbar.cpp  qt_thinking_indicator.cpp  qt_thinking_indicator.h  qt_window_system.cpp  qt_window_system.h  window_system.h
app/src/rendering/: buffer_manager.cpp  buffer_manager.h  gl_renderer.cpp  gl_renderer.h  scaling_manager.cpp  scaling_manager.h
app/src/resources/: scheme_handler.cpp  scheme_handler.h
app/src/runtime/: browser_control_handlers_content.cpp  browser_control_handlers_extraction.cpp  browser_control_handlers_navigation.cpp  browser_control_handlers_tabs.cpp  browser_control_server.cpp  browser_control_server.h  browser_control_server_internal.h  browser_control_server_routing.cpp  browser_controller.h  js_execution_utils.cpp  js_execution_utils.h  node_runtime.cpp  node_runtime.h
app/src/utils/: error.h  logging.cpp  logging.h
app/tests/: CMakeLists.txt  README.md
app/tests/browser/: cef_client_crash_test.cpp  cef_client_test.cpp  cef_engine_test.cpp  thread_safety_test.cpp
app/tests/core/: application_test.cpp  browser_window_test.cpp  types_test.cpp
app/tests/mocks/: mock_browser_engine.h  mock_gl_renderer.h  mock_window_system.h
app/tests/platform/: gtk_window_chat_test.cpp  gtk_window_tabs_test.cpp  qt_chat_bubble_test.cpp  qt_keyboard_test.cpp  qt_resize_test.cpp
app/tests/rendering/: buffer_manager_test.cpp  scaling_manager_test.cpp
app/tests/runtime/: js_execution_utils_test.cpp
app/tests/utils/: error_test.cpp  logging_test.cpp
athena-agent/: README.md  package.json  tsup.config.ts
athena-agent/docs/: README.md
athena-agent/docs/guides/: testing.md
athena-agent/src/: browser-api-client.ts  browser-controller-impl.ts  claude-client.ts  config.ts  logger.ts  mcp-agent-adapter.ts  mcp-server.ts  mcp-stdio-server.ts  native-controller.ts  server.ts  session-manager.ts  session-types.ts  tool-logging.d.ts  types.ts
athena-agent/src/__tests__/: claude-query-builder.test.ts  tool-logging.test.ts
athena-agent/src/__tests__/claude-config/: permissions.test.ts  sub-agents.test.ts
athena-agent/src/api/: v1.ts
athena-agent/src/claude-config/: browser-prompts.ts  sub-agents.ts
athena-agent/src/routes/: browser.ts  chat.ts  health.ts  poc.ts  sessions.ts
athena-agent/test/: claude-client-restrictions.test.ts
athena-agent/test/mcp/: README.md
cmake/: DownloadCEF.cmake
docs/: CURSOR_VISIBILITY_FIX.md  KNOWN_ISSUES.md  MCP_INTEGRATION.md  MIGRATION_V2.md  README.md  claude-desktop-config-mcp.json
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
homepage/: index.html  package-lock.json  vite.config.ts
homepage/src/: App.tsx
homepage/src/components/: Sidebar.tsx
node-runtime/: CLAUDE_SDK.md  QUICK_START.md  README.md  claude-client.js  package.json  server.js
node-runtime/examples/: cpp-usage.cpp
scripts/: build-homepage.sh  build.ps1  build.sh  dev.sh  format.sh  package-linux.sh  run.sh  test-all-logs.sh  test-cdp-connection.sh  test-mcp.sh  test-platform-flags.sh  view-logs.sh
tools/api-testing/: Athena_Browser_API_HTTP.postman_collection.json  README.md  proxy-server.js  proxy-server.py  test-api.sh
